techWrench/src/app/components/footer.module.css
.main {
  min-height: 10vh;
  width: 100%;
  padding: 2rem;
  color: #051D22;
  background-color: #CFC6BB;
}

.footer {
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.icon {
filter: brightness(0) saturate(100%) invert(36%) sepia(47%) saturate(406%) hue-rotate(148deg) brightness(91%) contrast(88%);  transition:
    background 0.2s,
    color 0.2s,
    border-color 0.2s;
}

.icon:hover {
filter: brightness(0) saturate(100%) invert(4%) sepia(60%) saturate(5463%) hue-rotate(177deg) brightness(96%) contrast(96%);}

.footer a {
  align-items: center;
  gap: 8px;
}

.footer img {
  flex-shrink: 0;
}

.addressContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.address {
  width: 33%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  text-align: center;
}

.socialLinks {
  display: flex;
  gap: 16px;
}

.socials {
  width: 33%;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}

.socialLabel {
  font-size: 0.875rem;
  font-weight: 600;
}

.logoContainer {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 33%;
}

.copyright {
  width: 33%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  text-align: center;
}

.copyright p {
  margin: 0;
  /* Remove default top/bottom spacing */
}

.copyright a {
  display: inline;
  /* Ensures it stays on the same line */
  text-decoration: none;
  /* Optional: remove underline */
  color: inherit;
  /* Optional: match text color */
}

.wrench:hover {
  color: #3C6A79;
}


/* @media (prefers-color-scheme: dark) {
  .logo {
    filter: invert();
  }
} */

@media (max-width: 850px) {

  .footer {
    flex-wrap: wrap;
    align-items: center;
    /* justify-content: space-between; */
  }

  .logoContainer {
    display: none;
    justify-content: center;
    align-items: center;
  }

  .address {
    width: 50%;
  }

  .copyright {
    width: 50%;
  }
}

@media (max-width: 450px) {

  .address {
    padding-bottom: 1rem;
    display: flex;
    flex-direction: column;
    width: 100%;
    align-items: center;
  }

  .socials {
    padding-bottom: 1rem;
    display: flex;
    /* flex-direction: column; */
    padding: 0 5rem;
    width: 100%;
    align-items: center;
  }

  .copyright {
    display: flex;
    flex-direction: column;
    width: 100%;
    align-items: center;
  }

}

